# mini-calc

./: Makefile  pyproject.toml
mini_calc/calculator/: main_cycle.py  tools.py  validation.py
mini_calc/scripts/: app.py
